--- a/roles/nomad/tasks/main.yml
+++ b/roles/nomad/tasks/main.yml
@@ -32,14 +32,7 @@
     dest: /etc/systemd/system/nomad.service
   notify: restart nomad service
 
-- name: copy the redis hcl
-  copy:
-    src: "redis.hcl"
-    dest: /tmp/redis.hcl
-    mode: 0644
-  when: nomad_config == "client"
-  register: redis
+- meta: flush_handlers
 
-- name: run the redis service
-  command: "/usr/bin/nomad run -address http://172.20.20.10:4646 /tmp/redis.hcl"
-  when: redis.changed
+- include_tasks: client.yml
+  when: nomad_config == "client"
